<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@drawable/bg"
    tools:context="zein.apps.kplp.MainActivity" >

    
   <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerInParent="true"
            android:src="@drawable/logokplp" />
        
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentRight="true"
            android:layout_marginTop="10dp"
            android:src="@drawable/logokemenhub" />
        
    </RelativeLayout>
    
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center" >

        <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textSize="18sp"
	        android:textStyle="bold"
	        android:text="Emergency Call" />
        
        <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textSize="14sp"
	        android:textStyle="bold"
	        android:text="@string/tugu" />
                
        <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textSize="14sp"
	        android:textStyle="bold"
	        android:text="@string/kas_opera" />
        
        <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textSize="14sp"
	        android:textStyle="bold"
	        android:text="@string/nomer_call" />
        
        <Button
            android:id="@+id/btn_emergency_callme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Call"
            style="@style/style_btn_yellow"
            android:layout_marginTop="10dp"
	        android:layout_marginRight="20dp"
	        android:layout_marginLeft="20dp" />

    </LinearLayout>

    

</LinearLayout>
