<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@drawable/bg"
    tools:context="zein.apps.kplp.MainActivity" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerInParent="true"
            android:src="@drawable/logokplp" />
        
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentRight="true"
            android:layout_marginTop="10dp"
            android:src="@drawable/logokemenhub" />
        
    </RelativeLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_marginTop="10dp" >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="@string/app_name" />
        
         <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textStyle="bold"
            android:text="@string/kepanjangankplp" />
         
         <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="@string/armada" />
         
         <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textStyle="bold"
            android:text="@string/tugu" />
         
     </LinearLayout>
     
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="10dp" >
	
      
        <Button
            android:id="@+id/btn_laporkan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Laporkan"
            style="@style/style_btn_yellow"
            android:layout_marginBottom="5dp"
	        android:layout_marginRight="20dp"
	        android:layout_marginLeft="20dp" />

        

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center" >

        <Button
            android:id="@+id/btn_profil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Profil KPLP"
            style="@style/style_btn_yellow"
            android:layout_marginBottom="5dp"
	        android:layout_marginRight="20dp"
	        android:layout_marginLeft="20dp" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center" >

        <Button
            android:id="@+id/btn_menu_emergency"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Emergency Call"
            style="@style/style_btn_yellow"
            android:layout_marginBottom="5dp"
	        android:layout_marginRight="20dp"
	        android:layout_marginLeft="20dp" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center" >

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Login"
            style="@style/style_btn_yellow"
            android:layout_marginBottom="5dp"
	        android:layout_marginRight="20dp"
	        android:layout_marginLeft="20dp" />

    </LinearLayout>

    

</LinearLayout>
